--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="col-md-2 col-6">
           <div class="container p-5">
                   <span>
-                    <img src="img\html.jpg"/></span>
+                    <img src="img\Html.jpg"/></span>
           </div>
         </div>
         <div class="col-md-2 col-6">
