--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <section class="intro-bg">
     <div class="content">
       <h1>Mukesh G</h1>
-      <h4><p> Artficial Intelligence | Automation <br>Cloud Computing | Data Science <br> Embedded System |Internet of Things <br> Instrumentation | Web Development </p></h4>
+      <h4><p> Agriculturist | Artificial Intelligence <br>Automation | Data Science <br> Embedded System |Internet of Things <br> Instrumentation | Web Development </p></h4>
       <div class="text-center socials">
         <a href="https://www.linkedin.com/in/mukesh-g-436a27156/"target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
         <a href="https://github.com/mukeshtoy"target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
