--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <div class="col-lg-6 col-md-12">
             <div class="card-body">
               <div class="h4 mt-0 title" style="font-size:30px;color:blue"><i>About</i></div>
-              <p style="font-size:18px">Hi ! I am <b>Mukesh</b>.</p>
-              <p>I’m in the final year of B.E from Kumaraguru College of Technology, Coimbatore with a specialization in Electronics and Instrumentation Engineering and will be graduating from the college in the year 2021.</p>
+              <p style="font-size:18px">Hi All! I'm <b>Mukesh</b>.</p>
+              <p>I completed my graduation in engineering from Kumaraguru College of Technology, Coimbatore with a specialization in Electronics and Instrumentation Engineering in 2021.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-12">
