--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="card-body">
               <div class="h4 mt-0 title" style="font-size:30px;color:blue"><i>About</i></div>
               <p style="font-size:18px">Hi All! I'm <b>Mukesh</b>.</p>
-              <p>I completed my graduation in engineering from Kumaraguru College of Technology, Coimbatore with a specialization in Electronics and Instrumentation Engineering in 2021.</p>
+              <p>I completed my graduation in engineering from Kumaraguru College of Technology, Coimbatore with a specialization in Electronics and Instrumentation Engineering.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-12">
